--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -111,7 +111,7 @@
                 <td th:text="${product.description}"></td>
                 <td><img th:src="${product.image}" alt="product image"></td>
                 <td class="action-buttons">
-                    <a href="#" class="btn btn-edit">Chỉnh sửa</a>
+                    <a href="#" class="btn btn-edit" th:href="@{/admin/edit/{id}(id=${product.id})}">Chỉnh sửa</a>
                     <a href="#" class="btn btn-delete" th:href="@{/admin/delete/{id}(id=${product.id})}">Xóa</a>
                 </td>
             </tr>
